--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Pharmacy Analysis</title>
+    <title>Pharmascope</title>
   </head>
   <body style="background-color: #15151e">
     <!-- 日時選択画面表示 -->
