modified init process

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body style="background-color: #15151e">
     <!-- 日時選択画面表示 -->
-    <div id="setting-display">
+    <div class="container-fluid pt-5 ps-5" id="setting-display">
       <h1>こんにちは あるいは こんばんは</h1>
       <p>日時を選択して、冒険を始めましょう</p>
       <div >
@@ -22,7 +22,7 @@
         <button type="button" class="btn btn-secondary" id="initial-btn">ぼうけんをはじめる・・・</button>
       </div>
     </div>
-    <div id="main-display" class="contaner-fluid">
+    <div id="main-display" class="container-fluid">
       <!-- 表示領域：上段 (再生コントローラー、時計) -->
       <div class="row upper-area">
         <div class="col-3 upper-left">
