--- a/index.html
+++ b/index.html
@@ -22,7 +22,40 @@
         <button type="button" class="btn btn-secondary" id="initial-btn">ぼうけんをはじめる・・・</button>
       </div>
     </div>
+    <!-- 分析画面表示 -->
     <div id="main-display" class="container-fluid">
+      <!-- ナビゲーションバーの表示 -->
+      <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Mode
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">待ち時間表示</a></li>
+                  <li><a class="dropdown-item" href="#">担当者表示</a></li>
+                </ul>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="date" placeholder="Search" aria-label="Search">
+              <button class="btn btn-sm btn-outline-success" type="submit">Start</button>
+            </form>
+          </div>
+        </div>
+      </nav>
       <!-- 表示領域：上段 (再生コントローラー、時計) -->
       <div class="row upper-area">
         <div class="col-3 upper-left">
