デザイン変更

--- a/Analysys.html
+++ b/Analysys.html
@@ -14,7 +14,7 @@
   </head>
   <body style="background-color: #15151e">
     <!-- ナビゲーションバーの表示 -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light p-0 m-0">
       <div class="container-fluid">
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -23,7 +23,7 @@
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
           </ul>
-          <ul class="navbar-nav me-5 mb-2 mb-lg-0">
+          <ul class="navbar-nav me-4 mb-2 mb-lg-0">
             <li class="nav-item dropdown d-flex">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Mode
@@ -40,7 +40,7 @@
     <!-- 日時選択画面表示 -->
     <div class="container-fluid pt-5 ps-5" id="setting-display">
     <!-- 分析画面表示 -->
-    <div id="main-display" class="container-fluid">
+    <div id="main-display" class="container-fluid m-0 p-0">
 
       <!-- 表示領域：上段 (再生コントローラー、時計) -->
       <div class="row upper-area">
