--- a/index.html
+++ b/index.html
@@ -8,38 +8,25 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_index.css" />
 
     <title>Pharmascope</title>
   </head>
-  <body style="background-color: #15151e">
-    <!-- ナビゲーションバーの表示 -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input class="form-control me-2" type="date" placeholder="Start" aria-label="Start">
-            <a href='./Analysys.html' class="btn btn-outline-success" type="submit">Start</a>
+  <body class="home">
+    <div class="container m-0">
+      <div class="title d-flex align-items-center justify-content-center">
+        <p>PHARMASCOPE</p>
+      </div>
+      <div class="main  d-flex flex-column align-items-center  justify-content-center">
+        <div>
+          <h1>日時を選択して、はじめましょう</h1>
+        </div>
+        <div>
+          <form class="">
+            <input class="form-control" type="date" placeholder="Start" aria-label="Start">
+            <a href='./Analysys.html' class="btn btn-outline-light justify-content-center" type="submit">はじめる</a>
           </form>
         </div>
-      </div>
-    </nav>
-    <!-- 日時選択画面表示 -->
-    <div class="container-fluid pt-5 ps-5" id="setting-display">
-      <h1>こんにちは あるいは こんばんは</h1>
-      <p>日時を選択して、冒険を始めましょう</p>
-      <div >
-        <input type="date" id="calendar">
-        <button type="button" class="btn btn-secondary" id="initial-btn">ぼうけんをはじめる・・・</button>
       </div>
     </div>
     
