--- a/Analysys.html
+++ b/Analysys.html
@@ -142,7 +142,7 @@
       </div>
 
       <!-- STAGE LABEL -->
-      <div class="row stage-label">
+      <div class="row stage-label m-1">
         <div class="col-3"></div>
         <div class="col-1 text-center">入力</div>
         <div class="col-1 text-center">処鑑待ち</div>
