ナビゲーションバーの修正

--- a/Analysys.html
+++ b/Analysys.html
@@ -14,24 +14,29 @@
   </head>
   <body>
     <!-- ナビゲーションバーの表示 -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light p-0 m-0">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
       <div class="container-fluid">
-
-        <div class="collaps e navbar-collapse" id="navbarSupportedContent">
+        <!-- <a class="navbar-brand" href="./index.html">Home</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button> -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
-          </ul>
-          <ul class="navbar-nav mb-lg-0">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Mode
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="#">待ち時間表示</a></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="#">担当者表示</a></li>
               </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">How to</a>
             </li>
           </ul>
         </div>
@@ -41,7 +46,7 @@
     <div id="main-display" class="container-fluid p-0">
 
       <!-- 表示領域：上段 (再生コントローラー、時計) -->
-      <div class="row pt-2">
+      <div class="row pt-3">
         <div class="col-3  d-flex align-items-center justify-content-center">
           <img class="p-1" id="backforward-btn" src="./img/backforward.png">
           <img class="p-1" id="play-btn" src="./img/play.png">
