表示切替方法を変更

--- a/Analysys.html
+++ b/Analysys.html
@@ -30,9 +30,9 @@
                 Mode
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">待ち時間表示</a></li>
+                <li><a class="dropdown-item" href="#" id="time-mode">待ち時間表示</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">担当者表示</a></li>
+                <li><a class="dropdown-item" href="#" id="person-mode">担当者表示</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -63,10 +63,6 @@
           </div>
         </div>
         <div class="col-2 align-self-center">
-          <select id="mode-select" class="form-select" style="background-color: #daf6ff; color:#0aafe6">
-            <option class="bg-dark text-light" value="TIME_DISP">待ち時間モード</option>
-            <option class="bg-dark text-light" value="PERSON_DISP">担当者モード</option>
-          </select>
         </div>
       </div>
 
