見た目の細かい修正

--- a/Analysys.html
+++ b/Analysys.html
@@ -65,6 +65,7 @@
           <p class="how-to-content my-0 ms-2">時間は平均を表示</p>
           <p class="how-to-content my-0 ms-2">待ち時間は、90分以上もしくは残置処方箋を除いて算出</p>
           <p class="how-to-content my-0 ms-2">稼働薬剤師数についても同様の条件で算出</p>
+          <p class="how-to-content my-0 ms-2">調剤/鑑査時間は処方鑑査終了から鑑査終了までの時間</p>
         </div>
       </div>
     </div>
@@ -113,12 +114,20 @@
                 <td id="input-time"></td>
               </tr>
               <tr>
+                <td>処方鑑査待ち時間</td>
+                <td id="pri-kansa-wait-time"></td>
+              </tr>
+              <tr>
                 <td>処方鑑査時間</td>
                 <td id="pri-kansa-time"></td>
               </tr>
               <tr>
                 <td>調剤/鑑査時間</td>
                 <td id="chouzai-kansa-time"></td>
+              </tr>
+              <tr>
+                <td>服薬指導待ち時間</td>
+                <td id="hukuyaku-wait-time"></td>
               </tr>
               <tr>
                 <td>服薬指導時間</td>
