How toメッセージ変更

--- a/Analysys.html
+++ b/Analysys.html
@@ -57,13 +57,13 @@
           <h5 class="border-bottom mt-3">再生コントロール</h5>
           <p class="how-to-content my-0 ms-2">左上部の再生ボタンをクリックする</p>
           <p class="how-to-content my-0 ms-2">もしくは、キーボードを使用する</p>
-          <p class="how-to-content my-0 ms-4">Space Key: 再生の一時停止、再開</p>
-          <p class="how-to-content my-0 ms-4">&rarr; Key: 早送り（15分）</p>
-          <p class="how-to-content my-0 ms-4">&larr; key: 巻戻し（15分）</p>
-          <p class="how-to-content my-0 ms-2">アニメーションエリアのクリックで再生・一時停止切り替え可</p>
+          <p class="how-to-content my-0 ms-4">・　Space Key: 再生停止、再開</p>
+          <p class="how-to-content my-0 ms-4">・　&rarr; Key: 早送り（15分）</p>
+          <p class="how-to-content my-0 ms-4">・　&larr; key: 巻戻し（15分）</p>
+          <p class="how-to-content my-0 ms-2">アニメーションエリアのクリックで再生・停止切り替え</p>
           <h5 class="border-bottom mt-3">統計情報</h5>
           <p class="how-to-content my-0 ms-2">時間は平均を表示</p>
-          <p class="how-to-content my-0 ms-2">待ち時間は、90分以上もしくは残置処方箋を除いて算出</p>
+          <p class="how-to-content my-0 ms-2">待ち時間は90分以上もしくは残置処方箋を除いて算出</p>
           <p class="how-to-content my-0 ms-2">稼働薬剤師数についても同様の条件で算出</p>
           <p class="how-to-content my-0 ms-2">調剤/鑑査時間は処方鑑査終了から鑑査終了までの時間</p>
         </div>
